Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9226

SHOW COLUMNS returns wrong column order for tables with large ENUMs

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL)
    • 5.5.47, 10.0.23, 10.1.10
    • Admin statements
    • None
    • Ubuntu 14.04, mariadb-10.0.21-linux-x86_64 package
    • 5.5.47-1

    Description

      The SHOW COLUMNS statement is returning columns in the wrong order when the table contains large ENUMs. The information_schema.COLUMNS table also returns the columns in the wrong order, but at least can be sorted by ORDINAL_POSITION.

      This is particularly problematic when using mysqldump with --complete-inserts as the generated inserts have the columns listed in the wrong order but the data in the right order causing data to be inserted in the wrong columns.

      I've attached the table definition along with the SHOW COLUMNS and mysqldump results for MariaDB 10.0.21 and MySQL 5.5.20.

      Attachments

        1. mariadb_mysqldump.txt
          8 kB
        2. mariadb_show.txt
          62 kB
        3. mysql_mysqldump.txt
          8 kB
        4. mysql_show.txt
          61 kB
        5. table_definition.txt
          6 kB

        Issue Links

          Activity

            Transition Time In Source Status Execution Times
            Elena Stepanova made transition -
            Open Confirmed
            22h 45m 1
            Sergei Golubchik made transition -
            Confirmed In Progress
            4d 18h 46m 1
            Sergei Golubchik made transition -
            In Progress Closed
            23h 19m 1

            People

              serg Sergei Golubchik
              ericpp Eric P
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.