MDEV-9226 SHOW COLUMNS returns wrong column order for tables with large ENUMs

set keep_row_order=true for temporary tables that
hold results of the SHOW command